[gd_scene load_steps=2 format=3 uid="uid://dfte4f7t7fkrn"]

[ext_resource type="Script" path="res://scripts/killzone.gd" id="1_nk0yu"]

[node name="Killzone" type="Area2D"]
collision_mask = 14
script = ExtResource("1_nk0yu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
